--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,10 @@ h2{
   width: 100%;
   height: auto;
 }
+.responsive-logo {
+  width: 100%;
+  height: auto;
+}
 
 h6{
   margin:0px;
@@ -26,12 +30,12 @@ h6{
 	padding-top: 1%;
 		
 }
-.imgd{
- 
-
+.menuicon{
+	display: none;
 }
-.hero-image {
-  
+
+.sidenav{
+	display: none;
 }
 .welcome-text{
   text-align: center;
@@ -119,4 +123,347 @@ right: 50%;
   background: -webkit-linear-gradient(45deg, #05abe0 0%,#15C745 100%);
   background: linear-gradient(45deg, #05abe0 0%,#15C745 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#05abe0', endColorstr='#15C745',GradientType=1 );
+}
+
+*, *:before, *:after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
+}
+p {
+  font-size: 0.9rem;
+  margin: 1rem 0;
+  line-height: 1.5;
+}
+
+.gridd {
+  max-width: 1000px;
+  margin: 0 auto;
+  text-align: center;
+  padding: 30px;
+}
+
+
+.section-lead {
+  max-width: 600px;
+  margin: 1rem auto 1.5rem;
+}
+
+.service a {
+  color: #5b7abb;
+  display: block;
+}
+
+.service h4 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  color: #56ceba;
+  font-size: 1.3rem;
+  margin: 1rem 0 0.6rem;
+}
+
+.services-grid {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+}
+
+.service {
+  background: #fff;
+  margin: 20px;
+  padding: 20px;
+  border-radius: 4px;
+  text-align: center;
+  -webkit-box-flex: 1;
+  flex: 1;
+  display: -webkit-box;
+  display: flex;
+  flex-wrap: wrap;
+  border: 2px solid #e7e7e7;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.service:hover {
+  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.08);
+  -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.08);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.08);
+}
+
+.service i {
+  font-size: 3.45rem;
+  margin: 1rem 0;
+}
+
+.service1 i,
+.service1 h4,
+.service1 .cta {
+  color: #42b7ca;
+}
+
+.service1:hover {
+  border: 2px solid #42b7ca;
+}
+
+.service2 i,
+.service2 h4,
+.service2 .cta {
+  color: #425fca;
+}
+.welc{
+		font-size: 4rem;
+	}
+
+.service2:hover {
+  border: 2px solid #425fca;
+}
+
+.service3 i,
+.service3 h4,
+.service3 .cta {
+  color: #9c42ca;
+}
+
+.service3:hover {
+  border: 2px solid #9c42ca;
+}
+
+.service .cta span {
+  font-size: 0.6rem;
+}
+
+.service > * {
+  flex: 1 1 100%;
+}
+
+.service .cta {
+  align-self: flex-end;
+}
+
+@media all and (max-width:900px) {
+  .services-grid {
+    display: -webkit-box;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column;
+  }
+}
+.disc{
+	background-color: #F2F2F2;
+	max-width: 100%;
+	height: 250px;
+  margin: 0 auto;
+  text-align: center;
+  padding: 30px;
+}
+.discaounts-home{
+	max-width: 44%;
+	position: relative;
+	right: 25rem;
+	
+}
+.button-order {
+  text-decoration: none;
+  border: none;
+	position: relative;
+	left: 15rem;
+  border-radius: 20px;
+  outline: 0;
+  display: inline-block;
+  padding: 15px 50px;
+  color: white;
+  background-color: #15C745;
+  text-align: center;
+  cursor: pointer;
+}
+.bottom-bar{
+	background-image: url("../images/botimg.png");
+	max-width: 100%;
+	height: 300px;
+  margin: 0 auto;
+  text-align: center;
+  padding: 30px;
+}
+.social-icons{
+	max-width: 100%;
+	position: relative;
+	bottom: 4rem;
+	left: 0.5rem;
+}
+.web-rights{
+	background-color:#3F494E ;
+	max-width: 100%;
+	height: 100px;
+  margin: 0 auto;
+  text-align: center;
+  padding: 30px;
+}
+.rights{
+	
+	color: white;
+	text-align: center;
+	position: relative;
+}
+.button-check{display: none;}
+
+.mobilehome{display: none;}
+
+
+@media (min-width: 320px) and (max-width: 480px) {
+	.hero-text{
+		display: none;
+	}
+	
+
+	.tabs{display: none;}
+	
+	.responsive{
+		display: none;
+	}
+	.mobilehome {
+		
+		display: block;
+		
+  max-width: 101%;
+  height: 643px;
+}
+	.menuicon{
+		display: block;
+	}
+	.sidenav {
+		display: block;
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+	
+	
+	.button-check {
+  text-decoration: none;
+  border: none;
+	position: relative;
+	left: 15rem;
+  border-radius: 20px;
+  outline: 0;
+  display: inline-block;
+  padding: 15px 50px;
+  color: white;
+  background-color: #15C745;
+  text-align: center;
+  cursor: pointer;
+}
+	.welc{
+		font-size: 4rem;
+	}
+	.welcome-text{
+  text-align: center;
+  position: absolute;
+  top: 153%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: black;
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
+
+.hero-text button, .welcome-text button{
+  border: none;
+  border-radius: 20px;
+  outline: 0;
+  display: inline-block;
+  padding: 15px 50px;
+  color: white;
+  background-color: #15C745;
+  text-align: center;
+  cursor: pointer;
+}
+
+.hero-text button:hover, .welcome-text button:hover{
+  background-color: #555;
+  color: white;
+}
+	
+.discaounts-home{
+	max-width: 112%;
+	position: relative;
+	right: 2rem;
+	
+}
+.button-order {
+  text-decoration: none;
+  border: none;
+	position: relative;
+	left: 0rem;  border-radius: 20px;
+  outline: 0;
+  display: inline-block;
+  padding: 15px 50px;
+  color: white;
+  background-color: #15C745;
+  text-align: center;
+  cursor: pointer;
+}
+	.bottom-bar{
+	background-image: url("../images/botimg.png");
+	max-width: 100%;
+	height: 300px;
+  margin: 0 auto;
+  text-align: center;
+  padding: 30px;
+}
+	.socialmedia-bot{
+		position: relative;
+		top: 5rem;
+		max-width: 27rem;
+	}
+	.social-icons{
+	max-width: 100%;
+	position: relative;
+	top: 6rem;
+	left: 1.5rem;
+}
+	
+	
 }
