--- a/css/home.css
+++ b/css/home.css
@@ -396,17 +396,21 @@ p {
         z-index: 1;
         top: 0;
         left: 0;
-        background-color: #111;
+		
+        background-image: url("../images/menubgrphone.png");
         overflow-x: hidden;
         transition: 0.5s;
         padding-top: 60px;
     }
 
     .sidenav a {
+		position: relative;
+		top: 15%;
         padding: 8px 8px 8px 32px;
         text-decoration: none;
-        font-size: 25px;
-        color: #818181;
+        font-size: 2rem;
+		font-weight: 500;
+        color: #085300;
         display: block;
         transition: 0.3s;
     }
@@ -456,7 +460,7 @@ p {
     .welcome-text {
         text-align: center;
         position: absolute;
-        top: 153%;
+        top: 150%;
         left: 50%;
         transform: translate(-50%, -50%);
         color: black;
