--- a/css/home.css
+++ b/css/home.css
@@ -291,7 +291,7 @@ p {
 }
 
 .disc {
-    background-color: #F2F2F2;
+    background-color: #3F494E;
     max-width: 100%;
     height: 250px;
     margin: 0 auto;
@@ -460,7 +460,7 @@ p {
     .welcome-text {
         text-align: center;
         position: absolute;
-        top: 150%;
+        top: 160%;
         left: 50%;
         transform: translate(-50%, -50%);
         color: black;
