--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ label{
     font-weight: 600;
     padding: 8px;
     letter-spacing: 2px;
-    background: #1accfd;
+    background: #15C745;
 }
 /* //top-header */
 /*-- header-bottom --*/
@@ -125,7 +125,7 @@ label{
     height: 42px;
     outline: none;
     box-shadow: none;
-    background: #1accfd;
+    background: #15C745;
     padding: 0;
     border-radius: inherit;
     -webkit-appearance: none;
@@ -204,7 +204,7 @@ label{
     margin: 0;
     font-weight: 700;
     letter-spacing: 1px;
-    background: #1accfd;
+    background: #15C745;
     color: #fff;
     margin: 20px 0;
 }
@@ -473,7 +473,7 @@ button.w3view-cart {
     -webkit-transform: perspective(1px) translateZ(0);
     transform: perspective(1px) translateZ(0);
     box-shadow: 0 0 1px transparent;
-    background: #1accfd;
+    background: #15C745;
     border-radius: 4px;
     color: #fff;
     letter-spacing: 2px;
@@ -500,7 +500,7 @@ button.w3view-cart {
 .snipcart-details input.button {
     font-size: 13px;
     color: #fff;
-    background: #1accfd;
+    background: #15C745;
     text-decoration: none;
     position: relative;
     border: none;
@@ -554,7 +554,7 @@ button.w3view-cart {
 }
 #PPminicartk .minicartk-submit {
     color: #fff !important;
-    background: #1accfd !important;
+    background: #15C745 !important;
     padding: 0 10px !important;
     font-size: 15px;
     letter-spacing: 1px;
@@ -566,7 +566,7 @@ button.w3view-cart {
     transition: 0.5s all;
     bottom: -25px!important;
     right: 0 !important;
-    border: 1px solid #1accfd!important;
+    border: 1px solid #15C745!important;
     border-radius: 0px!important;
     text-shadow: none!important;
 }
@@ -811,7 +811,7 @@ button.w3view-cart {
   color: #c4c4c4;
 }
 .search-hotel form input[type="submit"]{
-  background: url(../images/search.png) no-repeat 13px 11px #1accfd;
+  background: url(../images/search.png) no-repeat 13px 11px #15C745;
   width: 44px;
   height: 39px;
   border: none;
@@ -1032,7 +1032,7 @@ span.heading-style {
 .heading-style i:nth-child(2) {
     width: 12px;
     height: 12px;
-    background-color: #1accfd;
+    background-color: #15C745;
 }
 h3.tittle-w3l:after {
     content: "";
@@ -1181,7 +1181,7 @@ h3.tittle-w3l:after {
     transition: 0.5s all;
 }
 .footer-top input[type="submit"]:hover{
-	background:#1accfd;
+	background:#15C745;
 	-webkit-transition: 0.5s all;
     -moz-transition: 0.5s all;
     -o-transition: 0.5s all;
@@ -1255,7 +1255,7 @@ p.footer-main span {
     padding: 50px 0;
 }
 .footer-info h3 {
-    color: #1accfd;
+    color: #15C745;
     font-size: 22px;
     letter-spacing: 1px;
     margin-bottom:25px;
@@ -1547,7 +1547,7 @@ ul.w3_short {
 }
 .contact-text p i.fa {
     margin-right: 10px;
-    color: #1accfd;
+    color: #15C745;
 }
 .map iframe {
     width: 100%;
@@ -2021,7 +2021,7 @@ li.subitem1 p {
     width: 90%;
     border: none;
     padding: 16px;
-    border-bottom: solid 1px #1accfd;
+    border-bottom: solid 1px #15C745;
 	height:150px;
 	outline:none;
 }
@@ -2040,7 +2040,7 @@ li.subitem1 p {
 	margin-top:20px;
 }
 .wthree-help form input[type="submit"]:hover {
-    background: #1accfd;
+    background: #15C745;
     -webkit-transform: translateY(8px);
     -ms-transform: translateY(8px);
 	-o-transform: translateY(8px);
@@ -2055,7 +2055,7 @@ li.subitem1 p {
 .wthree-help a {
 	color:#fff;
 	padding:10px 20px;
-	background:#1accfd;
+	background:#15C745;
 	font-size:16px;
 	margin-bottom:50px;
 }
@@ -2263,10 +2263,10 @@ img.zoom-img:hover{
     margin-bottom: 12px;
 }
 .product-single-w3l {
-    border-top: 1px solid #1accfd;
+    border-top: 1px solid #15C745;
 }
 .product-single-w3l p i {
-    color: #1accfd;
+    color: #15C745;
     margin-right: 11px;
     font-size: 24px;
 }
@@ -2403,7 +2403,7 @@ td.invert-image a img {
     margin-top: 50px;
 }
 .address_form_agile h4 {
-    color: #1accfd;
+    color: #15C745;
     font-size: 24px;
     margin-bottom: 30px;
     letter-spacing: 1px;
@@ -2424,7 +2424,7 @@ td.invert-image a img {
 button.submit.check_out {
     padding: 12px 25px;
     letter-spacing: 1px;
-    background: #1accfd;
+    background: #15C745;
     font-size: 16px;
     color: #fff;
     border: none;
@@ -2468,7 +2468,7 @@ button.submit.check_out:hover {
 }
 .checkout-right-basket a span {
     margin-left: 7px;
-    color: #1accfd;
+    color: #15C745;
     font-size: 20px;
 }
 /*-- //payment button --*/
@@ -2493,10 +2493,10 @@ button.submit.check_out:hover {
     position: relative;
     padding: 6px 50px 11px;
     letter-spacing: 3px;
-    background: #1accfd;
+    background: #15C745;
     font-size: 1.5em;
     color: #fff;
-    border: 1px solid #1accfd;
+    border: 1px solid #15C745;
     outline: none;
     text-transform: uppercase;
     cursor:pointer;
@@ -2645,7 +2645,7 @@ input[type="radio"], input[type="checkbox"] {
     margin-left: 1em;
 }
 .vertical_post form input[type="submit"], .number-paymk input[type="submit"] {
-    background: #1accfd;
+    background: #15C745;
     color: #FFFFFF;
     text-align: center;
     padding: 11px 19px;
